# Rust_survival_tricks

./: LICENSE  README.md
Data_Structure/: name_book.rs
database/Diesel_ORM/UserManagerCrud/: Cargo.toml  README.md
database/Diesel_ORM/UserManagerCrud/database/: test.db
database/Diesel_ORM/UserManagerCrud/migrations/create_users/: up.sql
database/Diesel_ORM/UserManagerCrud/src/: lib.rs  models.rs
file_system/: file_ops.rs  rustfs  test.txt
strings/: basic_str  basic_str.rs
web_service/questbook_example/: .Cargo.lock.swp  Cargo.toml  Rocket.toml  readme.md
web_service/questbook_example/cert/: cert.pem  key.pem
web_service/questbook_example/migrations/2019-11-17-192300_create_tables/: down.sql  up.sql
web_service/questbook_example/src/: main.rs  questbook.rs
